Convert back to Java 11